--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +30,21 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+
+h2{
+  font-size: 48px;
+  font-weight: 300;
+  line-height: 56px;
 }
+
+h3{
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 33px;
+}
+
+/* h4{
+  font-size: 
+} */
